force-app/main/default/objects/Monthly_Commit__c/Monthly_Commit__c.object-meta.xml
<CustomObject>
    <label>Monthly Commit</label>
    <nameField>
        <label>Monthly Commit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Commit</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>