force-app/main/default/objects/Monthly_Commit__c/fields/Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Current_Month__c</fullName>
    <description>Checks the box if its the current month and year.
Used in the Weekly Commit flow to decide if the record should be processed</description>
    <formula>MONTH( X1st_of_Commit_Month__c ) = MONTH(TODAY()) &amp;&amp; YEAR( X1st_of_Commit_Month__c ) = YEAR(TODAY())</formula>
    <label>Current Month?</label>
    <type>Checkbox</type>
</CustomField>