force-app/main/default/objects/Monthly_Commit__c/fields/Current_Week_s_Commit__c.field-meta.xml
<CustomField>
    <fullName>Current_Week_s_Commit__c</fullName>
    <formula>IF( NOT( ISBLANK(Week_5_Commit__c)), Week_5_Commit__c,
IF( NOT( ISBLANK(Week_4_Commit__c)), Week_4_Commit__c,
IF( NOT( ISBLANK(Week_3_Commit__c)), Week_3_Commit__c,
IF( NOT( ISBLANK(Week_2_Commit__c)), Week_2_Commit__c,Week_1_Commit__c))))</formula>
    <label>Current Week&apos;s Commit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>