force-app/main/default/objects/Monthly_Commit__c/fields/Current_Weeks_Commit_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Current_Weeks_Commit_Calculated__c</fullName>
    <formula>IF( NOT( ISBLANK(Weekly_5_Calculated__c)), Weekly_5_Calculated__c,
IF( NOT( ISBLANK(Weekly_4_Calculated__c)), Weekly_4_Calculated__c,
IF( NOT( ISBLANK(Weekly_3_Calculated__c)), Weekly_3_Calculated__c,
IF( NOT( ISBLANK(Weekly_2_Calculated__c)), Weekly_2_Calculated__c, Weekly_1_Calculated__c))))</formula>
    <label>Current Weeks Commit (Calculated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>