force-app/main/default/objects/Monthly_Commit__c/fields/Number_of_Days_until_Next_Month__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_until_Next_Month__c</fullName>
    <description>Referenced in Other Formula Fields for Weekly Commit</description>
    <formula>IF(
  MONTH(  TODAY() ) = 12,
  DATE( YEAR(  TODAY() ), 12, 31 ),
  DATE( YEAR(  TODAY() ), MONTH (  TODAY() ) + 1, 1 )
) 
 - 
 TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days until Next Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>