force-app/main/default/objects/Monthly_Commit__c/fields/Week_1_Commit__c.field-meta.xml
<CustomField>
    <fullName>Week_1_Commit__c</fullName>
    <label>Week 1 Commit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>