force-app/main/default/objects/Monthly_Commit__c/fields/Week_1_Month_Upside_Calc__c.field-meta.xml
<CustomField>
    <fullName>Week_1_Month_Upside_Calc__c</fullName>
    <label>Week 1 - Month Upside (Calc)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>