force-app/main/default/objects/Monthly_Commit__c/fields/Week_2_Expected_Month_Commit__c.field-meta.xml
<CustomField>
    <fullName>Week_2_Expected_Month_Commit__c</fullName>
    <label>Week 2 - Expected Month Commit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>