force-app/main/default/objects/Monthly_Commit__c/fields/Week_3_Month_Expectation__c.field-meta.xml
<CustomField>
    <fullName>Week_3_Month_Expectation__c</fullName>
    <label>Week 3 - Expected Month Commit (Calc)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>