force-app/main/default/objects/Monthly_Commit__c/fields/Weekly_3_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Weekly_3_Calculated__c</fullName>
    <label>Weekly 3 Commit (Calculated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>