force-app/main/default/objects/Monthly_Commit__c/fields/X1st_of_Commit_Month__c.field-meta.xml
<CustomField>
    <fullName>X1st_of_Commit_Month__c</fullName>
    <description>Set by the Sales - Opportunity Monthly Commit Assignment Flow - 
Used to calculate if its the current month - If it is, then Weekly Commit Flow will run</description>
    <label>1st of Commit Month</label>
    <type>Date</type>
</CustomField>