force-app/main/default/objects/Monthly_Commit__c/validationRules/Cant_Change_Commit_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Change_Commit_Name</fullName>
    <active>true</active>
    <description>Commit Name is system generated and shouldn&apos;t be edited</description>
    <errorConditionFormula>ISCHANGED( Name )</errorConditionFormula>
    <errorMessage>Monthly Commit Name is system generated and can&apos;t be changed</errorMessage>
</ValidationRule>