force-app/main/default/objects/Monthly_Commit__c/listViews/My_Current_Commit.listView-meta.xml
<ListView>
    <fullName>My_Current_Commit</fullName>
    <columns>NAME</columns>
    <columns>Week_1_Commit__c</columns>
    <columns>Week_2_Commit__c</columns>
    <columns>Week_3_Commit__c</columns>
    <columns>Week_4_Commit__c</columns>
    <columns>Week_5_Commit__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Run_Weekly_Commit__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Current Commit</label>
</ListView>