force-app/main/default/objects/Monthly_Commit__c/listViews/My_Teams_Commit.listView-meta.xml
<ListView>
    <fullName>My_Teams_Commit</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Run_Weekly_Commit__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Teams Current Commit</label>
</ListView>